# query-in

./: .containerignore  .gitignore  .vercelignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  LICENSE  README.md  SECURITY.md  compose.yml  lighthouserc.cjs  plan.md  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  container-publish.yml  lighthouse.yml  wasm-package-size.yml
api/: health.js  projects.js
backend/: Cargo.toml
backend/src/: main.rs
deploy/: Caddyfile  README.md  compose.production.yml  vercel.md
docs/: github-workflow.md  performance.md  project-plan.md  release-checklist.md  ui-direction.md
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.vue  query-engine-wasm.d.ts  style.css
frontend/src/components/layout/: Footer.vue  Navbar.vue
frontend/src/composables/: useQueryEngine.integration.test.ts  useQueryEngine.ts  useQueryHistory.ts
frontend/src/pages/: AboutPage.vue  HomePage.vue  ProjectsPage.vue  QueryPage.vue  UseCasesPage.vue
frontend/src/router/: index.ts
frontend/src/workers/: query.worker.ts  queryEngineRuntime.ts  queryWorkerProtocol.ts
lib/: vercel-use-cases.cjs
query-engine-wasm/: Cargo.toml
query-engine-wasm/pkg/: .gitignore  package.json  query_engine_wasm.d.ts  query_engine_wasm.js  query_engine_wasm_bg.wasm  query_engine_wasm_bg.wasm.d.ts
query-engine-wasm/src/: lib.rs
scripts/: check-wasm-package.sh  container-entrypoint.sh  verify-vercel-wasm.sh
(+5 files in other folders)
