[package]
name = "query-engine-wasm"
version = "0.1.0"
edition = "2024"
description = "Rust WebAssembly query engine bindings for QueryFolio"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.100"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.123"
