[package]
name = "query-engine-wasm"
version = "0.1.0"
edition = "2024"
description = "Rust WebAssembly query engine bindings for Query In"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.4.0"
# DataFusion 53.1.0 compiles for wasm32-unknown-unknown with the minimal SQL feature set.
datafusion = { version = "53.1.0", default-features = false, features = ["sql"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
js-sys = "0.3.100"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
sqlparser = { version = "0.61.0", default-features = false, features = ["std"] }
wasm-bindgen = "0.2.123"
